--- a/.gitignore
+++ b/.gitignore
@@ -348,9 +348,9 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # SQLite database files
-*.db
-*.db-shm
-*.db-wal
+#*.db
+#*.db-shm
+#*.db-wal
 
 # ASP.NET Core app settings
 appsettings.Development.json
